Fix viewport height problem on safari

--- a/src/styles/layouts/_home.scss
+++ b/src/styles/layouts/_home.scss
@@ -15,7 +15,7 @@
   }
   @include sm {
     background-size: 100%, cover;
-    background-position: left 250px, center;
+    background-position: left 150px, center;
   }
   .f2e-layout-home-container {
     position: relative;
