--- a/src/styles/layouts/_layout.scss
+++ b/src/styles/layouts/_layout.scss
@@ -81,6 +81,7 @@
             margin: 40px 0;
             @include sm {
               width: 100px;
+              margin: 15px 0;
             }
           }
           .f2e-layout-upload-message {
